fix: fix semantic HTML in about me and FAQ and add lazy loading to covers and projects

--- a/src/css/about-me.css
+++ b/src/css/about-me.css
@@ -61,8 +61,11 @@
   background: none;
 }
 
-.ac .about-ac__title {
+.about-ac-header__wrapper {
   margin-bottom: 12px;
+}
+
+.ac .about-ac__title {
 
   font-size: 16px;
   text-transform: uppercase;
@@ -169,7 +172,7 @@
     padding-bottom: 32px;
   }
 
-  .ac .about-ac__title {
+  .about-ac-header__wrapper {
     margin-bottom: 8px;
   }
 
