--- a/src/css/base.css
+++ b/src/css/base.css
@@ -142,7 +142,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 /* Accordion */
-.ac .ac-header {
+.ac .ac-header__wrapper {
   font-weight: 600;
   line-height: 1.5;
   letter-spacing: -0.02em;
